--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 anyhow = "1.0.87"
 sea-orm = "1.0.1"
 serde = { version = "1.0.210", features = ["derive"] }
+tokio = { version = "1.28.0", features = ["full"] }
+migration = { path = "../migration" }
