human: fix errors and configs

--- a/config/dev.toml
+++ b/config/dev.toml
@@ -3,7 +3,7 @@ host = "127.0.0.1"
 port = 8080
 
 [database]
-url = "postgres://user:password@localhost/dev_db"
+url = "postgres://postgres:postgres@localhost/todo_app_dev"
 max_connections = 10
 
 [logging]
