--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 tera = "1.20.0"
 toml = "0.8.19"
+domain = { path = "domain" }
+tokio = { version = "1.40.0", features = ["full"] }
 
 [workspace]
 members = ["entity", "web", "domain"]
