--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde_json = "1.0.128"
 tera = "1.20.0"
 toml = "0.8.19"
 domain = { path = "domain" }
+web = { path = "web" }
 tokio = { version = "1.40.0", features = ["full"] }
 
 [workspace]
