--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -8,4 +8,7 @@ anyhow = "1.0.87"
 sea-orm = "1.0.1"
 serde = { version = "1.0.210", features = ["derive"] }
 tokio = { version = "1.28.0", features = ["full"] }
+chrono = { version = "0.4.38", features = ["serde"] }
+uuid = "1.10.0"
+entity = { path = "../entity" }
 migration = { path = "../migration" }
