--- a/entity/Cargo.toml
+++ b/entity/Cargo.toml
@@ -2,6 +2,11 @@
 name = "entity"
 version = "0.1.0"
 edition = "2021"
+publish = false
+
+[lib]
+name = "entity"
+path = "src/lib.rs"
 
 [dependencies]
 sea-orm = "1.0.1"
